lab5/out
make[1]: Entering directory '/home/elijah/etc/programs/CMPS104a/cmps104a/lab5'
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘std::string* astree_stride(symbol_table*, astree*)’:
3ac.cpp:287:28: error: cannot convert ‘std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>::iterator’ {aka ‘std::__detail::_Node_iterator<std::pair<const std::__cxx11::basic_string<char>* const, symbol*>, false, false>’} to ‘symbol*’ in assignment
  287 |       found = current->find(expr->lexinfo);
      |               ~~~~~~~~~~~~~^~~~~~~~~~~~~~~
      |                            |
      |                            std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>::iterator {aka std::__detail::_Node_iterator<std::pair<const std::__cxx11::basic_string<char>* const, symbol*>, false, false>}
3ac.cpp:290:15: error: redeclaration of ‘symbol* found’
  290 |       symbol *found;
      |               ^~~~~
3ac.cpp:285:15: note: ‘symbol* found’ previously declared here
  285 |       symbol *found;
      |               ^~~~~
3ac.cpp:294:15: error: redeclaration of ‘symbol* found’
  294 |       symbol *found;
      |               ^~~~~
3ac.cpp:285:15: note: ‘symbol* found’ previously declared here
  285 |       symbol *found;
      |               ^~~~~
3ac.cpp:296:28: error: cannot convert ‘std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>::iterator’ {aka ‘std::__detail::_Node_iterator<std::pair<const std::__cxx11::basic_string<char>* const, symbol*>, false, false>’} to ‘symbol*’ in assignment
  296 |       found = current->find(expr->lexinfo);
      |               ~~~~~~~~~~~~~^~~~~~~~~~~~~~~
      |                            |
      |                            std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>::iterator {aka std::__detail::_Node_iterator<std::pair<const std::__cxx11::basic_string<char>* const, symbol*>, false, false>}
3ac.cpp:302:28: error: cannot convert ‘astree*’ to ‘symbol_table*’ {aka ‘std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>*’}
  302 |       return astree_stride(noneq);
      |                            ^~~~~
      |                            |
      |                            astree*
3ac.cpp:262:37: note:   initializing argument 1 of ‘std::string* astree_stride(symbol_table*, astree*)’
  262 | string *astree_stride(symbol_table *current,astree *expr){
      |                       ~~~~~~~~~~~~~~^~~~~~~
make[1]: *** [Makefile:55: 3ac.o] Error 1
make[1]: Leaving directory '/home/elijah/etc/programs/CMPS104a/cmps104a/lab5'
